<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>no.nav.familie.ba.sak</groupId>
    <artifactId>familie-ba-sak</artifactId>
    <version>${revision}${sha1}${changelist}</version>
    <name>familie-ba-sak-konsistensavstemming-job</name>
    <description>Jobb for å kjøre konsistensavstemming</description>

    <properties>
        <java.version>21</java.version>
        <kotlin.version>1.9.22</kotlin.version>
        <revision>1</revision>
        <sha1/>
        <changelist>-SNAPSHOT</changelist>



    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-bom</artifactId>
                <version>${kotlin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-stdlib</artifactId>
                <version>${kotlin.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.3.1</version>
        </dependency>

    </dependencies>

    <repositories>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/navikt/familie-felles</url>
        </repository>
    </repositories>


    <build>
        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
        <finalName>${project.artifactId}</finalName>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>3.1.0</version>
                    <executions>
                        <execution>
                            <id>ktlint</id>
                            <phase>verify</phase>
                            <configuration>
                                <target name="ktlint">
                                    <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
                                          classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
                                        <arg value="src/**/*.kt"/>
                                    </java>
                                </target>
                            </configuration>
                            <goals>
                                <goal>run</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>ktlint-format</id>
                            <configuration>
                                <target name="ktlint">
                                    <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
                                          classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
                                        <arg value="-F"/>
                                        <arg value="src/**/*.kt"/>
                                        <!-- Trenger dette for å kjøre ktlint med java 17 -->
                                        <jvmarg value="--add-opens"/>
                                        <jvmarg value="java.base/java.lang=ALL-UNNAMED"/>
                                    </java>
                                </target>
                            </configuration>
                            <goals>
                                <goal>run</goal>
                            </goals>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>com.pinterest.ktlint</groupId>
                            <artifactId>ktlint-cli</artifactId>
                            <version>1.1.1</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <id>enforce-banned-dependencies</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <bannedDependencies>
                                    <excludes>
                                        <exclude>org.junit.*:*:*:jar:compile</exclude>
                                    </excludes>
                                </bannedDependencies>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <!-- For å få dependency graph i SLSA som pushes av docker-build-push parameter byosbom -->
                <groupId>org.cyclonedx</groupId>
                <artifactId>cyclonedx-maven-plugin</artifactId>
                <version>2.7.11</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>makeAggregateBom</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
